Updated MainPage and Navbar components. Application loads correctly in browser.

--- a/giftlink-frontend/public/home.html
+++ b/giftlink-frontend/public/home.html
@@ -6,7 +6,7 @@
     <title>GiftLink Home</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/home.css">
+    <link rel="stylesheet" href="static/home.css">
 </head>
 <body>
     <div class="container my-5">
